FIX: composer for creating a new topic on mobile

--- a/app/assets/stylesheets/desktop/compose.scss
+++ b/app/assets/stylesheets/desktop/compose.scss
@@ -337,6 +337,10 @@
     left: 432px;
     top: -19px;
   }
+  button.btn.no-text {
+    margin: 7px 0 0 5px;
+    position: absolute;
+  }
 }
 
 .reply-to {
